@@ -4,7 +4,7 @@ Description: Provides an interface to the Twitter web API
 Version: 1.1.7
 Author: Jeff Gentry <geoffjentry@gmail.com>
 Maintainer: Jeff Gentry <geoffjentry@gmail.com>
-Depends: R (>= 2.12.0), ROAuth (>= 0.9.3), RCurl, rjson (>= 0.2.12), methods
+Depends: R (>= 2.12.0), httr, rjson (>= 0.2.12), methods
 License: Artistic-2.0
 LazyData: yes
 BuildVignettes: no
